--- a/go-web-app/helm/go-app-chart/values.yaml
+++ b/go-web-app/helm/go-app-chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: jyothiram266/go-web
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1"
+  tag: "latest"
 
 ingress:
   enabled: false
